crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__formatting__bibtex_internal_join_strings.snap
---
source: tests/lsp/text_document/formatting.rs
expression: "format(r#\"\n%! main.bib\n@article{foo, bar = \"baz\" # \"qux\"}\n|\"#)"
---
@article{foo,
    bar = "baz" # "qux",
}
