crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__formatting__bibtex_internal_parens.snap
---
source: tests/lsp/text_document/formatting.rs
expression: "format(r#\"\n%! main.bib\n@article(foo,)\n|\"#)"
---
@article{foo,
}
